@@ -72,3 +72,12 @@ where calculating again "next" would give the correct value for "experimentValue
 to 
 
                 GUI.Label(labelRect, string.Format("{0:0.##}  /  {1:0.##}", curr, total), _progressLabelStyle);
+
+
+
+OTHER CHANGES:
+
+
+
+====>	[alartor]
+====>	Fixed "Here and Now" and Main window (both normal and compact) not showing (or hiding) experiments after a change in the MinScience threshold implies experiment is now incomplete (or completed).
